--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <link rel="preconnect" href="https://fonts.gstatic.com">
+    
+    <!--font family-->
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+    
+    <!--favicon URL-->
+    <link rel="shortcut icon" href="./assets/images/favicon.ico" type="image/x-icon"/>
 
     <title>J.D Asesorìa & Consultorìa SG - SST</title>
 
