--- a/servicios.html
+++ b/servicios.html
@@ -9,7 +9,12 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <link rel="preconnect" href="https://fonts.gstatic.com">
+
+    <!--font family-->
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+
+    <!--favicon URL-->
+    <link rel="shortcut icon" href="./assets/images/favicon.ico" type="image/x-icon"/>
 
     <title>Servicios - J.D SG - SST</title>
 
@@ -58,9 +63,9 @@ https://templatemo.com/tm-564-plot-listing
             <!-- ***** Logo End ***** -->
             <!-- ***** Menu Start ***** -->
             <ul class="nav">
-              <li><a href="index.html" class="active">Inicio</a></li>
+              <li><a href="index.html">Inicio</a></li>
               <li><a href="beneficios.html">Beneficios</a></li>
-              <li><a href="servicios.html">Servicios</a></li>
+              <li><a href="servicios.html" class="active">Servicios</a></li>
               <li><a href="contactanos.html">Contactanos</a></li> 
               <li><a href="http://"></a></li>
             </ul>
@@ -106,22 +111,22 @@ https://templatemo.com/tm-564-plot-listing
                   <div class="col-lg-3">
                     <div class="menu">
                       <div class="first-thumb active">
-                        <div class="thumb">
+                        <div class="thumb text-white">
                           Montaje sistema SG-SST
                         </div>
                       </div>
                       <div>
-                        <div class="thumb">
+                        <div class="thumb text-white">
                           Medicina laboral
                         </div>
                       </div>
                       <div>
-                        <div class="thumb">
+                        <div class="thumb text-white">
                           Trabajos en Altura
                         </div>
                       </div>
                       <div class="last-thumb">
-                        <div class="thumb">
+                        <div class="thumb text-white">
                           asesoría jurídica
                         </div>
                       </div>
