--- a/beneficios.html
+++ b/beneficios.html
@@ -9,7 +9,12 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <link rel="preconnect" href="https://fonts.gstatic.com">
+
+    <!--font family-->
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+
+    <!--favicon URL-->
+    <link rel="shortcut icon" href="./assets/images/favicon.ico" type="image/x-icon"/>
 
     <title>Beneficios J.D SG - SST</title>
 
@@ -58,8 +63,8 @@ https://templatemo.com/tm-564-plot-listing
             <!-- ***** Logo End ***** -->
             <!-- ***** Menu Start ***** -->
             <ul class="nav">
-              <li><a href="index.html" class="active">Inicio</a></li>
-              <li><a href="beneficios.html">Beneficios</a></li>
+              <li><a href="index.html">Inicio</a></li>
+              <li><a href="beneficios.html" class="active">Beneficios</a></li>
               <li><a href="servicios.html">Servicios</a></li>
               <li><a href="contactanos.html">Contactanos</a></li> 
               <li><a href="http://"></a></li>
