--- a/contactanos.html
+++ b/contactanos.html
@@ -113,7 +113,9 @@ https://templatemo.com/tm-564-plot-listing
                   </div>
                 </div> 
                 <div class="col-lg-6 align-self-center">
-                  <script type="text/javascript" src="https://form.jotformz.com/jsform/72687113040652"></script>
+                  <div class="form-contact">
+                    <script type="text/javascript" src="https://form.jotformz.com/jsform/72687113040652"></script>
+                  </div>
                 </div> 
               </div>
             </div>
